# TensorRT_int8_demo

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  demo.cpp  demo_batch.cpp  demo_thread.cpp  demo_thread_dingshi_ceshi.cpp
include/: Module_yolov5.h  Module_yolov5_impl.h  alg_define.h  data_type.h  debug.h  post_process.h  pre_process.h
include/tensorrt/: Module_yolov5_tensorrt_impl.h
models/yolov5/face/: face_320_one_output.onnx
npp_demo/: CMakeLists.txt  npp_demo.cpp
src/: CMakeLists.txt  Module_yolov5.cpp  Module_yolov5_impl.cpp  mat_pixel_affine.cpp  mat_pixel_resize.cpp  post_process.cpp  pre_process.cpp
src/tensorrt/: Module_yolov5_tensorrt_impl.cpp  Module_yolov5_tensorrt_impl_create.cpp
tensorrt_int8_demo/: CMakeLists.txt  OnnxBatchStream.hpp  crop_yolo_resize.py  npp_image_preprocess.cpp  npp_image_preprocess.h  onnx_to_trt_int8.cpp  quant_int8_conifg.json
